--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "configure-husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\""
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
+    "private": true,
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare"
+    },
+    "devDependencies": {
+        "eslint": "^8.25.0",
+        "nuxt": "3.0.0-rc.12",
+        "prettier": "^2.7.1"
+    },
+    "dependencies": {
+        "@pinia/nuxt": "^0.4.3"
     }
-  },
-  "devDependencies": {
-    "eslint": "^8.25.0",
-    "nuxt": "3.0.0-rc.12",
-    "prettier": "^2.7.1"
-  },
-  "dependencies": {
-    "@pinia/nuxt": "^0.4.3"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx,json}": [
-      "eslint . --fix",
-      "prettier --write ."
-    ]
-  }
 }
