--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
         "dev": "nuxt dev",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
-        "postinstall": "nuxt prepare"
+        "postinstall": "nuxt prepare",
+        "lint": "eslint --fix .",
+        "beautify": "prettier --write ."
     },
     "devDependencies": {
         "eslint": "^8.25.0",
